--- a/Snippets/files/snippets.css
+++ b/Snippets/files/snippets.css
@@ -1,5 +1,6 @@
 /*
- * Copyright 2010 (c) John Reese
+ * Copyright (c) 2010 - 2012  John Reese
+ * Copyright (c) 2012 - 2013  MantisBT Team - mantisbt-dev@lists.sourceforge.net
  * Licensed under the MIT license
  */
 
