Improve layout of Snippets list footer
Align Select all checkbox vertically

Fixes #60

--- a/files/snippets.css
+++ b/files/snippets.css
@@ -36,3 +36,8 @@
 .width-5 {
 	width: 5%;
 }
+
+table#snippets-list-footer {
+	background-color: transparent !important;
+	margin-bottom: 0 !important;
+}
