--- a/files/snippets.css
+++ b/files/snippets.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010 - 2012  John Reese
+ * Copyright (c) 2010 - 2012  Amethyst Reese
  * Copyright (c) 2012 - 2021  MantisBT Team - mantisbt-dev@lists.sourceforge.net
  * Licensed under the MIT license
  */
